Adjusting two services